[package]
name = "chip-8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beryllium = { version = "0.13.3", default-features = false}
gl33 = "0.2.1"
rand = "0.9.0-alpha.1"
eframe = "0.27.2"
egui = "0.27.2"